test/spec_vectors/loop/fail/module_18.wat
(module (func $type-value-nums-vs-void (loop (i32.const 1) (i32.const 2))))